force-app/main/default/objects/FTMSBill__c/fields/Tknmanxselling__c.field-meta.xml
<CustomField>
    <fullName>Tknmanxselling__c</fullName>
    <label>Tk nợ(ma_nx)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>13111</fullName>
            </value>
            <value>
                <fullName>13112</fullName>
            </value>
            <value>
                <fullName>131141</fullName>
            </value>
            <value>
                <fullName>131142</fullName>
            </value>
            <value>
                <fullName>13113</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>