force-app/main/default/objects/FTMSBill__c/fields/Tkthutkthuei__c.field-meta.xml
<CustomField>
    <fullName>Tkthutkthuei__c</fullName>
    <label>Tk thuế(tk_thue_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>