force-app/main/default/objects/FTMSBill__c/fields/Tlcktlck__c.field-meta.xml
<CustomField>
    <fullName>Tlcktlck__c</fullName>
    <label>Tỷ lệ ck  (%)(tl_ck)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>