force-app/main/default/objects/FTMSBill__c/fields/TotalAmountofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingFCY__c</fullName>
    <formula>if( TaxIncludedBuying__c = FALSE, UnitPriceofBuyingFCY__c *  ChargeQuantity__c, UnitPriceofBuyingFCY__c*ChargeQuantity__c - AmountTaxBuyingFCY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>