force-app/main/default/objects/FTMSBill__c/fields/TotalAmountofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingLocal__c</fullName>
    <formula>if( TaxIncludedBuying__c = FALSE, UnitPriceofBuyingLocal__c *  ChargeQuantity__c, UnitPriceofBuyingLocal__c*ChargeQuantity__c - AmountTaxBuyingLocal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>