force-app/main/default/objects/FTMSBill__c/fields/TotalAmountofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingFCY__c</fullName>
    <formula>IF(TaxIncluded__c= FALSE, ChargeQuantity__c *  UnitPriceFCY__c, ChargeQuantity__c *  UnitPriceFCY__c - AmountTaxSellingFCY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>