force-app/main/default/objects/FTMSBill__c/fields/TotalAmountofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingLocal__c</fullName>
    <formula>IF(TaxIncluded__c= FALSE, ChargeQuantity__c *  UnitPriceofSellingLocal__c, ChargeQuantity__c *  UnitPriceofSellingLocal__c - AmountTaxSellingLocal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>