force-app/main/default/objects/FTMSBill__c/fields/TotalAmountofSellingLocalAdjust__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingLocalAdjust__c</fullName>
    <label>Total Amount of Selling(Local)-Adjust</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>