force-app/main/default/objects/FTMSBill__c/fields/TotalBuyingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxFCY__c</fullName>
    <formula>AmountTaxBuyingFCY__c+ TotalAmountofBuyingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buying Incl Tax (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>