force-app/main/default/objects/FTMSBill__c/fields/TotalBuyingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxLocal__c</fullName>
    <formula>AmountTaxBuyingLocal__c +  TotalAmountofBuyingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buying Incl Tax (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>