force-app/main/default/objects/FTMSBill__c/fields/TotalSellingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxFCY__c</fullName>
    <formula>AmountTaxSellingFCY__c +  TotalAmountofSellingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Incl Tax (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>