force-app/main/default/objects/FTMSBill__c/fields/TotalSellingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxLocal__c</fullName>
    <formula>AmountTaxSellingLocal__c +  TotalAmountofSellingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Incl Tax (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>