force-app/main/default/objects/FTMSBill__c/fields/UnitPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceFCY__c</fullName>
    <label>Unit Price of Selling (FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>