force-app/main/default/objects/FTMSBill__c/fields/UnitPriceofBuying3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuying3rdCurrency__c</fullName>
    <label>Unit Price of Buying(3rd Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>