force-app/main/default/objects/FTMSBill__c/fields/UnitPriceofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuyingFCY__c</fullName>
    <label>Unit Price of Buying (FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>