force-app/main/default/objects/FTMSBill__c/fields/UnpaidBalanceofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceofBuyingFCY__c</fullName>
    <formula>TotalBuyingInclTaxFCY__c -  AmountPaidforCustomerFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance of Buying (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>