force-app/main/default/objects/FTMSBill__c/fields/UnpaidBalanceofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceofBuyingLocal__c</fullName>
    <formula>TotalBuyingInclTaxLocal__c -  AmountPaidforCustomerLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance of Buying (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>