force-app/main/default/objects/FTMSBill__c/fields/UnreceivedBalanceofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceofSellingFCY__c</fullName>
    <formula>TotalSellingInclTaxFCY__c -  AmountReceivedfromCustomer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unreceived Balance of Selling (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>