force-app/main/default/objects/FTMSBill__c/fields/UnreceivedBalanceofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceofSellingLocal__c</fullName>
    <formula>TotalSellingInclTaxLocal__c -  AmountReceivedfromCustomerLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unreceived Balance of Selling (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>