force-app/main/default/objects/FTMSBill__c/fields/VATrateselling__c.field-meta.xml
<CustomField>
    <fullName>VATrateselling__c</fullName>
    <label>VAT rate-selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>