force-app/main/default/objects/FTMSBill__c/fields/vt_dvtselling__c.field-meta.xml
<CustomField>
    <fullName>vt_dvtselling__c</fullName>
    <formula>Text( ChargeUnit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Đvt(dvt)</label>
    <type>Text</type>
</CustomField>