force-app/main/default/objects/FTMSBill__c/fields/vtdvt__c.field-meta.xml
<CustomField>
    <fullName>vtdvt__c</fullName>
    <formula>TEXT(ChargeUnit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Đvt(dvt)</label>
    <type>Text</type>
</CustomField>