force-app/main/default/objects/FTMSBill__c/validationRules/Lock_billing_after_SO_is_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_billing_after_SO_is_Locked</fullName>
    <active>false</active>
    <errorConditionFormula>AND( FTMSSO__r.Lock_SO__c  =TRUE,
$Profile.Name &lt;&gt;&quot;ASAP - ACCOUNTING&quot;,$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
OR(
ISCHANGED(  InvoiceTo__c ),
ISCHANGED(  PaymentTo__c  ),
ISCHANGED(  Service__c  ),
ISCHANGED(  BillNameatPrintENG__c ),
ISCHANGED(  BillNameatPrintLocal__c ),
ISCHANGED(  ChargeQuantity__c  ),
ISCHANGED(  ChargeUnit__c  ),
ISCHANGED(  VATratebuying__c  ),
ISCHANGED(  VATrateselling__c ),
ISCHANGED(  UnitPriceofBuyingFCY__c ),
ISCHANGED(  UnitPriceofBuyingLocal__c  ),
ISCHANGED(   UnitPriceofSellingLocal__c ),
ISCHANGED(  AdvancePaymentonbehalfofCustomer__c  ),
ISCHANGED(  AdvancePaymentonbehalfofOurCompany__c ),
ISCHANGED(  InboundVATINVNo__c ),
ISCHANGED(  OutboundVATInvNo__c ),
ISCHANGED(  AmountBuyingInclTaxFCY__c ),
ISCHANGED(  AmountBuyingInclTaxLocal__c ),
ISCHANGED(  AmountSellingInclTaxLocal__c ),
ISCHANGED(  AmountSellingInclTaxFCY__c ),
ISCHANGED(   AmountSellingInclTaxAdjustLocal__c   )))</errorConditionFormula>
    <errorMessage>You can not edit this billing because F/TMS SO has been locked. Please contact your accounting department for more detail. Thanks</errorMessage>
</ValidationRule>