force-app/main/default/objects/FTMSBill__c/validationRules/Lock_record_after_16th_Next_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_record_after_16th_Next_Month</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
AND( DAY( TODAY() ) &gt; 16, MONTH( TODAY() ) &gt;= MONTH( DATEVALUE( CreatedDate ) )+1, YEAR( TODAY() ) = YEAR( DATEVALUE ( CreatedDate ) ) ),
YEAR( TODAY() ) &gt; YEAR( DATEVALUE ( CreatedDate ) ) ),
$User.Username &lt;&gt; &quot;thuyha@asapfreight.vn&quot;
)</errorConditionFormula>
    <errorMessage>You are not allowed to edit or delete this Bill after 16th next month of the created date. Please contact Ms.Thuy Ha for more information!</errorMessage>
</ValidationRule>