force-app/main/default/objects/FTMSBill__c/validationRules/Prevent_delete_Bill_when_form_No_exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_delete_Bill_when_form_No_exist</fullName>
    <active>true</active>
    <errorConditionFormula>Forbid_Deleted_checkbox__c = True</errorConditionFormula>
    <errorMessage>Could not delete this F/TMS Bills since it already had Debit/Credit No. Please contact to Accountant/Administrator for more information!</errorMessage>
</ValidationRule>