force-app/main/default/objects/FTMSBill__c/validationRules/PreventUserEditBillAfter40days.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUserEditBillAfter40days</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
(NOW() - FTMSSO__r.CreatedDate ) &gt; 40,
$User.Username != &quot;thuyha@asapfreight.vn.asap&quot;
)</errorConditionFormula>
    <errorMessage>You are not allowed to edit this record after 40 days from the created date. Please contact Ms.Thuy Ha for more information!</errorMessage>
</ValidationRule>